--- a/2023-14/small.html
+++ b/2023-14/small.html
@@ -1,6 +1,9 @@
 <html lang="en">
 <head>
   <title>14. Small : Divtober 2023</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet" type="text/css" >
 </head>
  
