--- a/2023-23/fake.html
+++ b/2023-23/fake.html
@@ -1,6 +1,9 @@
 <html lang="en">
 <head>
   <title>23. Fake : Divtober 2023</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet" type="text/css" >
 </head>
  
