updating pieces and adding links

--- a/2023-25/cheesy.html
+++ b/2023-25/cheesy.html
@@ -1,6 +1,13 @@
 <html lang="en">
 <head>
   <title>25. Cheesy : Divtober 2023</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700;800&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@600&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet" type="text/css" >
 </head>
  
