--- a/2023-26/cold.html
+++ b/2023-26/cold.html
@@ -1,7 +1,6 @@
 <html lang="en">
 <head>
-  <title>26
-    . Cold : Divtober 2023</title>
+  <title>26. Cold : Divtober 2023</title>
   <link href="style.css" rel="stylesheet" type="text/css" >
 </head>
  
