--- a/2023-27/rules.html
+++ b/2023-27/rules.html
@@ -1,10 +1,13 @@
 <html lang="en">
 <head>
   <title>27. Rules : Divtober 2023</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Acme&family=Bangers&family=Comic+Neue&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet" type="text/css" >
 </head>
  
 <body>
-  <div class="cold"></div>
+  <div class="rules"></div>
 </body>
 </html>
