updating page header

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
   <link href="style.css" rel="stylesheet" type="text/css" >
+  <title>CSS Art Studio of Greg Robleto</title>
 </head>
 
 
