adding in 2 more days

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <header>CSS Art Studio of <a href="https://www.robleto.com">Greg Robleto</a></header>
   <main class="grid"> 
 
+    <!-- 2023 - 30. Discontinued -->
+    <a href="https://codepen.io/robleto/pen/jOdbKoJ" target="_blank">
+    <iframe id="discontinued" title="30. Discontinued" src="2023-30/discontinued.html" width="100%" height="100%" scrolling="no" frameBorder="0"></iframe></a>
+
+    <!-- 2023 - 29. Pin -->
+    <a href="https://codepen.io/robleto/pen/abXONPp" target="_blank">
+    <iframe id="pin" title="29. Pin" src="2023-29/pin.html" width="100%" height="100%" scrolling="no" frameBorder="0"></iframe></a>
 
     <!-- 2023 - 28. Handmade -->
     <a href="https://codepen.io/robleto/pen/poGvWEX" target="_blank">
