--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <header>CSS Art Studio of <a href="https://www.robleto.com">Greg Robleto</a></header>
   <main class="grid"> 
 
+
+    <!-- 2023 - 31. Witchy -->
+    <a href="https://codepen.io/robleto/pen/jOdbvoY" target="_blank">
+    <iframe id="witchy" title="31. Witchy" src="2023-31/witchy.html" width="100%" height="100%" scrolling="no" frameBorder="0" loading="lazy"></iframe></a>
+
     <!-- 2023 - 30. Discontinued -->
     <a href="https://codepen.io/robleto/pen/jOdbKoJ" target="_blank">
     <iframe id="discontinued" title="30. Discontinued" src="2023-30/discontinued.html" width="100%" height="100%" scrolling="no" frameBorder="0" loading="lazy"></iframe></a>
