fixing sizing and formatting of main page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
 <body>
-  <header>CSS Art Studio of <a href="https://www.robleto.com">Greg Robleto</a></header>
+  <header><h1>CSS Art Studio of <a href="https://www.robleto.com">Greg Robleto</a></h1></header>
   <main class="grid"> 
 
 
