--- a/2022-lollipop/lollipop.html
+++ b/2022-lollipop/lollipop.html
@@ -1,10 +1,10 @@
 <html lang="en">
 <head>
-  <title>08. Haunted : Divtober 2022</title>
+  <title>Lollipop : Single Div art</title>
   <link href="style.css" rel="stylesheet" type="text/css" >
 </head>
  
 <body>
-  <div class="spooky"></div>
+  <div class="lollipop"></div>
 </body>
 </html>
